  - load class in addition to roles when using create_class_from_roles
  - fix module name in Makefile.PL (RT#78591)

1.001005 - 2012-07-18
  - localize UNIVERSAL::can change to avoid confusing TB2
  - properly report roles consumed by superclasses

1.001004 - 2012-07-12
  - remove strictures.pm from the test supplied by mmcleric so we install again
  - when applying runtime roles include roles from original class in new class
    ( fixes ::does_role checks)

1.001003 - 2012-06-19
  - correctly apply modifiers with role composition
  - check for conflicts during role-to-object application (test from mmcleric)
  - add an explicit return to all exported subs so people don't accidentally
    rely on the return value
  - store coderefs as well as their refaddrs to protect against crazy

1.001002 - 2012-05-05
  - alter duplication test to not provoke Class::Method::Modifiers loading

1.001001 - 2012-04-27
  - remove strictures from one last test file

1.001000 - 2012-04-27
  - Documentation improvements, no code changes

1.000_901 - 2012-04-12
  - Fix MANIFEST inclusion of Role::Basic composition

1.000_900 - 2012-04-11
  - Add composition with tests stolen from Role::Basic

1.000001 - 2012-04-03
  - Document that Class::Method::Modifiers must be depended on separately
  - Update tests so that they skip correctly without C::M::M
  - Add a SEE ALSO section

1.000000 - 2012-03-29
  - Remove redundant code in create_class_with_roles
  - Minor doc fix to does_role
  - Split Role::Tiny out into its own dist

Changes below this line are from when Role::Tiny was still bundled with Moo:

  - Fix a bug where coercions weren't called on lazy default/builder returns
  - Switch Moo::Utils to using Module::Runtime, and add the 5.8 %INC
    leakage fix into Role::Tiny's _load_module to provide partial parity
  - Update incompatibilities with Moose documentation
  - Remove Sub::Quote's outstanding queue since it doesn't actually slow